# sports-analytics

./: .dockerignore  .gitignore  README.md  homography_projector.py  main.py  pyproject.toml  test_scene_classifier_eval.py
docker/viz/: Dockerfile  cloudbuild.yaml  entrypoint.sh  export_person_seg.py  prewarm_models.py  requirements.txt
docs/: HANDOFF.md
graphify-out/cache/: stat-index.json
models/: scene_mlp_metrics.json
notebooks/: broadcast_pipeline_4phase_colab_guide.ipynb  broadcast_pipeline_colab_guide (1).ipynb  broadcast_pipeline_colab_guide.ipynb
plans/: embedding_camera_id.md  plan_2d_3d_reconstruction.md  plan_camera_id_assignment.md
scripts/: analyze_camera_assignment.py  annotate_court_keypoints.py  benchmark_ocr.py  download_person_seg_model.py  download_tennis_court_model.py  enrich_scene_samples.py  eval_camera_clustering.py  eval_homography.py  generate_dimension_keypoints.py  render_camera_collages.py  rerun_cameras.py  run_camera_clustering.py  run_ocr.py  serve_timeline_viz.py  train_scene_classifier.py  tune_ensemble.py
src/: camera_split_segment.py
src/accelerator/: __init__.py  device.py  install.py
src/broadcast_pipeline/: __init__.py  aggregator.py  appearance_compat.py  appearance_filter.py  artifacts.py  camera_assignment.py  camera_debug.py  camera_merge.py  camera_vlm_qa.py  config.py  ocr_autotune.py  ocr_runner.py  orchestrator.py  preflight.py  progress.py  scene_extractor.py  scene_filter.py  scenes_io.py  text_associate.py  text_enrich.py  text_reference.py  types.py  video_meta.py
tests/: conftest.py
(+131 files in other folders)
