[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "cv-problem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hdbscan>=0.8",
    "matplotlib>=3.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "scenedetect>=0.7",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
court = [
    "torch>=2.0",
    "torchvision>=0.15",
]
embedding = [
    "torch>=2.0",
    "torchvision>=0.15",
    "matplotlib>=3.8",
    "certifi>=2024.0",
]
ocr = [
    "rapidocr>=3.8",
    "onnxruntime>=1.17",
]
ocr-gpu = [
    "rapidocr>=3.8",
    "onnxruntime-gpu>=1.17",
]
ocr-vlm = [
    "openai>=1.40",
]
gpu = [
    "torch>=2.0",
    "torchvision>=0.15",
    "certifi>=2024.0",
    "rapidocr>=3.8",
    "onnxruntime-gpu>=1.17",
]
viz = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "onnxruntime>=1.17",
]
appearance = [
    "onnxruntime>=1.17",
]
appearance-export = [
    "ultralytics>=8.3",
    "onnx>=1.17",
]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
